--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <!-- begin contacts  -->
-<div class="contacts">
+<div class="contacts" id="contacts">
 	<div class="contacts__title">
 		<h2>КОНТАКТЫ</h2>
 	</div>
