--- a/src/partials/course.html
+++ b/src/partials/course.html
@@ -75,7 +75,7 @@
 			<!-- begin course__desc  -->
 			<div class="course__desc l-col4">
 				<div class="course__left-desc l-col6">
-					<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
+					<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА НАЗВАНИЕ КУРСА НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
 					<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
 					<div class="course__pricing">
 						<button>
