--- a/src/partials/course_more.html
+++ b/src/partials/course_more.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="course__more__inner l">
 		<div class="photo l-col1">
-			<img src="./img/portrait.jpg">
+			<img src="./img/placeholder.svg">
 		</div>
 		<div class="description__out l-col2">
 			<div class="course__more__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
@@ -16,12 +16,10 @@
 
 			В первой части курса мы посмотрим, что у хорошего рассказа вертится «внутри», разберем литературный механизм на шестеренки, и выясним, как они сцеплены между собой. Обсудим разницу между полнокровными героями и унылой нежитью. Разберемся, как собирать материал на улице, на вечеринке, в толпе незнакомых людей, и у себе в голове. Научимся извлекать достоверную выдумку из бытовых мелочей и рядовых происшествий. Выясним, как подать историю, чтобы читатель не захлебнулся в деталях, как оставить ему пространство для догадок и озарений – то есть для его собственного воображения. Мы поучимся точности в словах у Антона Чехова и Джона Апдайка, лаконичности у Эрнеста Хемингуэя, обращению с деталями у Рэймонда Карвера и Джека Лондона.</p></div>
 			<div class="course__more__download">
-				.course__more__download
-				<a class="course__more__li" href="#">
-					<i class="icon-li"></i>
-				</a>
+				<img src="./img/pdf.svg">
+				<div class="download"> <a href="#">Скачать брошюру</a><br>(368kB)</div>
 			</div>
-			<div class="price"><span>3200</span> грн</div>
+			<div class="price">3000 грн</div>
 			<button>
 				<a href="/" id="ord_course">
 					<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
