--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,14 +13,16 @@
 					<li class="nav__item"><a href="#">О ШКОЛЕ</a></li>
 					<li class="nav__item"><a href="#">ПРОГРАММЫ</a></li>
 					<li class="nav__item"><a href="#">ТРЕНЕРЫ</a></li>
-					<li class="nav__item"><a href="#">КОНТАКТЫ</a></li>
+					<li class="nav__item"><a href="#contacts" >КОНТАКТЫ</a></li>
 				</ul>
 			</div>
 			<button class="order">
-				<a href="#" id="ord_btn" > Записаться на программу</a>
+				<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+				<a href="#" id="ord_btn" >ЗАПИСАТЬСЯ НА ПРОГРАММУ</a>
 			</button>
 			<div class="lang">
 				<span>Рус</span>
+				<span>Укр</span>
 				<sub></sub>
 
 			</div>
