--- a/src/sass/_layouts.sass
+++ b/src/sass/_layouts.sass
@@ -9,7 +9,7 @@
 		width: 60%
 	.l-col4
 		float: left
-		width: 78.56%
+		width: 76.56%
 		.l-col6
 			float: left
 			width: 41%
@@ -18,7 +18,7 @@
 			width: 58%
 	.l-col5
 		float: right
-		width: 21%
+		width: 23%
 	.l-col8
 		float: left
 		width: 37%
@@ -26,3 +26,10 @@
 	.l-col9
 		float: right
 		width: 62%
+
+	.l-col10
+		float: left
+		width: 25%
+	.l-col11
+		float: right
+		width: 75%
