--- a/src/sass/_svgfont.sass
+++ b/src/sass/_svgfont.sass
@@ -9,8 +9,11 @@ $icon-arrow-right: "\EA01"
 $icon-fb: "\EA02"
 $icon-flogo: "\EA03"
 $icon-in: "\EA04"
-$icon-li: "\EA05"
-$icon-logo2: "\EA06"
+$icon-left: "\EA05"
+$icon-li: "\EA06"
+$icon-logo2: "\EA07"
+$icon-quotes: "\EA08"
+$icon-right: "\EA09"
 
 
 %icon
@@ -35,7 +38,13 @@ $icon-logo2: "\EA06"
 	content: $icon-flogo
 .icon-in:before
 	content: $icon-in
+.icon-left:before
+	content: $icon-left
 .icon-li:before
 	content: $icon-li
 .icon-logo2:before
 	content: $icon-logo2
+.icon-quotes:before
+	content: $icon-quotes
+.icon-right:before
+	content: $icon-right
