--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -1,9 +1,15 @@
-// done by Coderiver.com.ua
+
 @import lib/base
 @import reset
-@import common
+@import common 
 @import sprite
 @import svgfont
 
 @import layouts
+@import header
+@import coach
+@import course
+@import contacts
+@import slick
+@import popup
 @import main
