--- a/src/sass/_slick.sass
+++ b/src/sass/_slick.sass
@@ -1,5 +1,5 @@
 .slick-slider
-	position: relative
+	//position: relative
 	display: block
 	box-sizing: border-box
 	-moz-box-sizing: border-box
@@ -37,9 +37,9 @@
 	transform: translate3d(0, 0, 0)
 
 .slick-track
-	position: relative
-	left: 0
-	top: 0
+	//position: relative
+	// left: 0
+	// top: 0
 	display: block
 	zoom: 1
 	&:before,
@@ -55,6 +55,7 @@
 	float: left
 	height: 100%
 	min-height: 1px
+	text-align: center 
 	img
 		display: block
 		max-width: 100%
@@ -74,12 +75,22 @@
 
 .slick-prev,
 .slick-next
+	z-index: 10
 	position: absolute
-	top: 50%
-	margin-top: -14px
+	top: 57%
 	+hide-text
 	height: 50px
+	width: 20px
 	background: none
+	font-family: "svgfont"
+	font-style: normal
+	font-weight: normal
+	text-rendering: auto
+	speak: none
+	line-height: 1
+	-webkit-font-smoothing: antialiased
+	-moz-osx-font-smoothing: grayscale
+	display: inline-block
 	&:focus
 		outline: none
 	&.slick-disabled
@@ -88,47 +99,54 @@
 		height: 50px
 		line-height: 50px
 .slick-prev
-	left: 0
+	left: 30px
+	color: #D2D2D2
+	&:hover 
+		color: $red
 	&:before
-		content: "←"
+		content: $icon-left
 		display: inline-block
 		vertical-align: middle
-		font-size: 61px
-		color: #fff
-.slick-next
-	right: 0
-	&:before
-		content: "→"
-		display: inline-block
-		vertical-align: middle
-		font-size: 61px
-		color: #fff
-.slick-dots
-	text-align: center
-	position: absolute
-	margin: 0
-	bottom: 0
-	left: 0
-	right: 0
-	li
-		position: relative
-		display: inline-block
-		padding: 0 3px
-		&.slick-active
-			button
-				opacity: 0.3
-				box-shadow: none
-		&:before
-			display: none
+		font-size: 20px
 
-	button
-		display: block
-		width: 6px
-		height: 6px
-		background: #fff
-		+box-shadow(0 1px 5px rgba(0,0,0,.25))
-		cursor: pointer
-		+hide-text
-		border-radius: 50%
-		&:hover
-			box-shadow: none
+
+.slick-next
+	right: 30px
+	color: #D2D2D2
+	&:hover
+		color: $red
+	&:before
+		content: $icon-right
+		display: inline-block
+		vertical-align: middle
+		font-size: 20px
+
+// .slick-dots
+// 	text-align: center
+// 	position: absolute
+// 	margin: 0
+// 	bottom: 0
+// 	left: 0
+// 	right: 0
+// 	li
+// 		position: relative
+// 		display: inline-block
+// 		padding: 0 3px
+// 		&.slick-active
+// 			button
+// 				opacity: 0.3
+// 				box-shadow: none
+// 		&:before
+// 			display: none
+
+// 	button
+// 		display: block
+// 		width: 6px
+// 		height: 6px
+// 		background: #fff
+// 		box-shadow : 0 1px 5px rgba(0,0,0,.25)
+// 		cursor: pointer
+// 		+hide-text
+// 		border-radius: 50%
+// 		&:hover
+// 			box-shadow: none
