--- a/src/partials/coaches_main.html
+++ b/src/partials/coaches_main.html
@@ -93,7 +93,7 @@
 
 <div class="coach__main-btn">
 	<button>
-		<a href="/">
+		<a href="/ds">
 			<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
 			Все тренеры
 		</a>
