--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,9 +10,9 @@
 			</div>
 			<div class="heeder__nav">
 				<ul class="nav">
-					<li class="nav__item"><a href="#">О ШКОЛЕ</a></li>
-					<li class="nav__item"><a href="#">ПРОГРАММЫ</a></li>
-					<li class="nav__item"><a href="#">ТРЕНЕРЫ</a></li>
+					<li class="nav__item"><a href="/about.html">О ШКОЛЕ</a></li>
+					<li class="nav__item"><a href="/courses.html">ПРОГРАММЫ</a></li>
+					<li class="nav__item"><a href="/coaches.html">ТРЕНЕРЫ</a></li>
 					<li class="nav__item"><a href="#contacts" >КОНТАКТЫ</a></li>
 				</ul>
 			</div>
