--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -1,14 +1,16 @@
 <!-- begin partners  -->
 <div class="partners --remove-buttons">
 	<div class="partners__inner js-slick-partners">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
-			<img src="http://lorempixel.com/60/40/people/">
+			<img src="img/p1.png">
+			<img src="img/p2.png">
+			<img src="img/p3.png">
+			<img src="img/p4.png">
+			<img src="img/p5.png">
+			<img src="img/p1.png">
+			<img src="img/p2.png">
+			<img src="img/p3.png">
+			<img src="img/p4.png">
+			<img src="img/p5.png">
 	</div>
 </div>
 <div class="partners-logo">
