--- a/src/partials/testimonial.html
+++ b/src/partials/testimonial.html
@@ -6,7 +6,7 @@
 		<div class="testimonial-persone l">
 				<div class="testimonial-persone-left l-col10">
 					<div class="coach-pic">
-						<img src="http://lorempixel.com/200/200/people/">
+						<img src="img/1.png">
 						<div class="quotes icon-quotes"></div>
 					</div>
 					<p>Константин Петров</p>
@@ -20,7 +20,7 @@
 		<div class="testimonial-persone l">
 				<div class="testimonial-persone-left l-col10">
 					<div class="coach-pic">
-						<img src="http://lorempixel.com/200/200/people/">
+						<img src="img/2.png">
 						<div class="quotes icon-quotes"></div>
 					</div>
 					<p>Константин Петров</p>
@@ -34,7 +34,7 @@
 		<div class="testimonial-persone l">
 				<div class="testimonial-persone-left l-col10">
 					<div class="coach-pic">
-						<img src="http://lorempixel.com/200/200/people/">
+						<<i></i>mg src="img/1.png">
 						<div class="quotes icon-quotes"></div>
 					</div>
 					<p>Константин Петров</p>
