--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -33,6 +33,12 @@
 			width: 48%
 			vertical-align: top
 			padding-bottom: 0px
+			span p
+				display: inline
+				padding-bottom: 0px
+			span + p
+				display: inline
+				padding-bottom: 0px
 		.divframe__inner:first-child
 			padding-right: 45px
 		.divframe__inner:last-child
@@ -64,7 +70,7 @@
 
 	.about__after-frame
 		margin-top: 80px
-		padding: 27px 
+		padding: 27px
 		display: block
 		height: auto
 		width: calc(100% - 10px)
@@ -93,3 +99,5 @@
 			li
 				list-style-type: disc
 				list-style-position: inside
+				p
+					padding-bottom: 0px
