--- a/src/sass/_partners.sass
+++ b/src/sass/_partners.sass
@@ -6,15 +6,20 @@
 	img
 		padding: 10px
 		outline: none
+		+gray
+		&:hover
+			filter: none
+			-webkit-filter: none
+
 	.slick-arrow
 		display: none !important
 
 .partners-logo
 	padding-top: 60px
 	.partners-logo__inner
-		background-color: #101110
-		background-image: url("./../img/Mainf.jpg")
-		background-size: contain
+		background-color: #0A273C
+		background-image: url("./../img/mainf.png")
+		background-size: 1528px 238px
 		background-repeat: no-repeat
 		height: 240px
 		background-position: 50% 50%
