--- a/src/sass/_sprite.sass
+++ b/src/sass/_sprite.sass
@@ -1,6 +1,8 @@
 $icons: (0:0)
-$icons: map-merge($icons,(codedby: (X: 0px, Y:-9px, W: 47px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(front_a: (X: -1290px, Y:0px, W: 643px, H: 675px, TW: 1933px, TH: 1350px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(front_a@2x: (X: 0px, Y:0px, W: 1286px, H: 1350px, TW: 1933px, TH: 1350px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(soon_o: (X: -1290px, Y:-1097px, W: 217px, H: 207px, TW: 1933px, TH: 1350px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(soon_o@2x: (X: -1290px, Y:-679px, W: 434px, H: 414px, TW: 1933px, TH: 1350px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -35,15 +37,27 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, 
 	+sprite-retina($i)	
 
 //
-//.icon-codedby
-//	width: 47px
-//	height: 5px
+//.icon-front_a
+//	width: 643px
+//	height: 675px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -9px
+//	background-position: -1290px 0px
 //
-//.icon-coderiver
-//	width: 49px
-//	height: 5px
+//.icon-front_a@2x
+//	width: 1286px
+//	height: 1350px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px 0px
+//
+//.icon-soon_o
+//	width: 217px
+//	height: 207px
+//	background-image: url('../img/icons.png')
+//	background-position: -1290px -1097px
+//
+//.icon-soon_o@2x
+//	width: 434px
+//	height: 414px
+//	background-image: url('../img/icons.png')
+//	background-position: -1290px -679px
 //
