--- a/src/sass/_testimonial.sass
+++ b/src/sass/_testimonial.sass
@@ -21,12 +21,13 @@
 				border-radius: 50%
 				overflow: hidden
 				display: inline-block
+				object-fit: cover
 			.quotes
 				position: absolute
 				width: 35px
 				height: 35px
 				bottom: 0
-				left: 52%
+				left: 65%
 				border-radius: 50%
 				background-color: $pagination__link
 				line-height: 35px
@@ -43,7 +44,7 @@
 			+fb
 			font-size: 18px
 	.testimonial-persone-right
-		height: 140px
+		min-height: 140px
 		padding: 33px
 		border: 1px solid #D2D2D2
 		border-radius: 5px
