--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -2,13 +2,13 @@
 @import lib/base
 @import reset
 @import common
-@import sprite
 @import svgfont
 
 @import layouts
 @import header
 @import coach
 @import course
+@import about_index
 @import contacts
 @import slick
 @import popup
