--- a/src/partials/course_main.html
+++ b/src/partials/course_main.html
@@ -1,38 +1,116 @@
-<div class="course__main --remove-buttons">
+<div class="course course__main --helper-button">
 	<div class="course__main__title">
 		<h2>ПРОГРАММЫ</h2>
 	</div>
 	<div class="course__wrap-slider js-slick-course__main">
 		<div class="slider__item">
-			<div class="course__main__wrap-backgradient ">
-				<div class="course__main__block">
-
-						<div class="course__main-desc">
-							<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
+			<div class="course__wrap-backgradient course__main__wrap-backgradient l">
+				<div class="course__block">
+					<!-- begin course__desc  -->
+					<div class="course__desc l-col4">
+						<div class="course__left-desc l-col6">
+							<div class="course__name"><h2><a href="">НАЗВАНИЕ БАЗОВОГО КУРСА НАЗВАНИЕ КУРСА НАЗВАНИЕ БАЗОВОГО КУРСА</a></h2></div>
 							<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
-							<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. Цель программы — дать студенту </p>
+							<div class="course__pricing">
+								<button>
+									<a href="course1" id="ord_course">
+										<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+										Записаться
+									</a>
+								</button>
+								<div class="price"><span>3200</span> грн</div>
+							</div>
 						</div>
-						<div class="course__main-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"></i></div>
+						<div class="course__right-desc l-col7">
+							<div class="course__text">
+								<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. <br/>Цель программы — дать студенту. В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.</p>
+							</div>
+							<div class="course__text-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"></i></div>
+						</div>
+					</div>
+					<!-- end coursae__desc -->
 
+					<!-- begin course__coach  -->
+					<div class="course__coach l-col5">
+						<div class="vertical-line"></div>
+						<div class="course__coach-inner">
+							<span>Тренери</span>
+							<div class="course__coach-persone">
+								<div class="course__coach-persone-inner">
+									<a href="#">
+										<div class="course__coach-pic"><img src="./img/5.png"></div>
+										<p>Марина Стародубская </p>
+									</a>
+								</div>
+
+								<div class="course__coach-persone-inner">
+									<a href="#">
+										<div class="course__coach-pic"><img src="./img/7.png"></div>
+										<p>Ярына Ключковская</p>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
+				<!-- end course__coach -->
 			</div>
 		</div>
 		<div class="slider__item">
-			<div class="course__main__wrap-backgradient ">
-				<div class="course__main__block">
-
-						<div class="course__main-desc">
-							<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
-							<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
-							<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. Цель программы — дать студенту </p>
+			<div class="course__wrap-backgradient course__main__wrap-backgradient l">
+					<div class="course__block">
+						<!-- begin course__desc  -->
+						<div class="course__desc l-col4">
+							<div class="course__left-desc l-col6">
+								<div class="course__name"><h2>НАЗВАНИЕ БАЗОВОГО КУРСА НАЗВАНИЕ КУРСА НАЗВАНИЕ БАЗОВОГО КУРСА</h2></div>
+								<div class="course__data"><span>20.03.2016</span> - <span>21.06.2016</span></div>
+								<div class="course__pricing">
+									<button>
+										<a href="course1" id="ord_course">
+											<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+											Записаться
+										</a>
+									</button>
+									<div class="price"><span>3200</span> грн</div>
+								</div>
+							</div>
+							<div class="course__right-desc l-col7">
+								<div class="course__text">
+									<p>Программы в сфере коммуникаций продолжительностью до 3 месяцев. <br/>Цель программы — дать студенту. В різний час складалася з 10—12 класів, які діляться на 3 ступені — молодші, середні, старші. Школу відвідують в дитячому віці. Вивчають навчальні предмети. Щоб закінчити навчальний заклад, необхідно скласти іспити, учні отримують «Атестат зрілості» (поняття, широко вживане в радянську добу). Нині учні після завершення навчання у школі отримують Свідоцтво про базову або повну середню освіту.</p>
+								</div>
+								<div class="course__text-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"></i></div>
+							</div>
 						</div>
-						<div class="course__main-more"><a href="#">ПОДРОБНЕЕ</a><i class="icon-arrow-right"></i></div>
+						<!-- end coursae__desc -->
 
+						<!-- begin course__coach  -->
+						<div class="course__coach l-col5">
+							<div class="vertical-line"></div>
+							<div class="course__coach-inner">
+								<span>Тренери</span>
+								<div class="course__coach-persone">
+									<div class="course__coach-persone-inner">
+										<a href="#">
+											<div class="course__coach-pic"><img src="./img/5.png"></div>
+											<p>Марина Стародубская </p>
+										</a>
+									</div>
+
+									<div class="course__coach-persone-inner">
+										<a href="#">
+											<div class="course__coach-pic"><img src="./img/7.png"></div>
+											<p>Ярына Ключковская</p>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end course__coach -->
 				</div>
-			</div>
 		</div>
 
-		<div class="slider__item">
+<!-- 		<div class="slider__item">
 			<div class="course__main__wrap-backgradient ">
 				<div class="course__main__block">
 
@@ -118,14 +196,14 @@
 
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
 <!-- end course -->		
 
 <div class="course__main-btn">
 	<button class="--change-color">
-		<a href="/">
+		<a href="/courses.html">
 			<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
 			Все программы
 		</a>
