--- a/src/sass/_top.sass
+++ b/src/sass/_top.sass
@@ -1,13 +1,82 @@
+
+
 .top
 	position: relative
 	margin: 70px 0 0 0
-	background-color: #060606
-	background-image: url("./../img/main.jpg")
-	background-size: contain
+	background-color: #002138
+	background-image: url("./../img/main.png")
+	background-size: 1530px 635px
 	background-repeat: no-repeat
 	min-height: 626px
 	//height: 100%
 	background-position: 50% 50%
+	.top__bg-svg
+		position: absolute
+
+		height: 101%
+		width: 100%
+		/* height: 626px; */
+		overflow: hidden
+		/* width: 100%; */
+		&.is-drawn1  [data-name="tab1"] path, &.is-drawn1  [data-name="tab1"] line,
+		&.is-drawn2  [data-name="tab2"] path, &.is-drawn2  [data-name="tab2"] line,
+		&.is-drawn3  [data-name="tab3"] path, &.is-drawn3  [data-name="tab3"] line,
+		&.is-drawn4  [data-name="tab4"] path, &.is-drawn4  [data-name="tab4"] line,
+		&.is-drawn5  [data-name="tab5"] path, &.is-drawn5  [data-name="tab5"] line
+			//animation: dash 1s linear forwards
+			stroke-dashoffset: 0
+		svg
+			z-index: 80
+			position: absolute
+			top: 50%
+			left: 50%
+			transform: translate(-28px, -320px)
+			height: 100%
+			.tab-hover
+				z-index: 91
+				pointer-events: fill
+				visibility: hidden
+			path, line
+				+tr(all 1s)
+				stroke-dasharray: 1000
+				stroke-dashoffset: 1000
+		.tab-container
+			position: absolute
+			top: 50%
+			left: 50%
+			z-index: 80
+			transform: translate(230px, -69px)
+			+tr(all .5s)
+			&.is-drawn rect,
+			&.is-drawn line
+				stroke-dashoffset: 0
+			svg
+				position: absolute
+				top: 50%
+				left: 50%
+				transform: translate(-120px, -50px)
+				height: 100%
+				rect, line
+					+tr(all .5s)
+					stroke-dasharray: 1000
+					stroke-dashoffset: 1000
+
+			nav
+				position: static
+				height: 100px
+				width: 250px
+				overflow: hidden
+				li
+					+f
+					color: white
+					list-style-type: none
+					padding: 15px 10px 10px 25px
+					display: none
+					&.is-viewing
+						display: block
+
+
+
 	.top__inner
 		@extend %in
 		height: 626px
